[package]
name = "test_iced"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
iced.workspace = true
iced.features = ["advanced"]

[lints]
workspace = true
