[package]
name = "test_iced"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
#iced.workspace = true
#iced.features = ["advanced"]
iced="0.12.1"
iced_aw = {version = "0.9.3", default-features = false, features = ["wrap", "number_input", "modal", "date_picker","icons","card","tab_bar","tabs","selection_list"]}

[lints]
workspace = true

